# youtubetogo

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
YouTubeToGo/: main.py
youtubetogo/: __init__.py  main.py
